# Fourier-Series-Wave-Circles-Animation-Graphics-Project

./: CMakeLists copy.txt  CMakeLists.txt  README.md
Code/include/: constant.h
include/: constant.h  draw.h  render.h  utils.h
src/: constant.cpp  draw.cpp  main.cpp  render.cpp  utils.cpp
src/Fourier Seriess/: constant.cpp  draw.cpp  main.cpp  utils.cpp
src/Projects/: square copy 10.cpp  square copy 11.cpp  square copy 12.cpp  square copy 13.cpp  square.cpp  square_b.cpp  static.cpp
